[package]
name = "vlk_tracing_subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.22", default-features = false, features = ["std", "derive"], optional = true }
serde = { version = "1.0.215", default-features = false, features = [
    "derive",
], optional = true }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "std",
    "smallvec",
] }

[features]
default = []
serde = ["dep:serde"]
ansi = ["tracing-subscriber/ansi"]
env-filter = ["tracing-subscriber/env-filter"]
clap = ["dep:clap"]
